# iis-projekt

./: .cache.sqlite  .gitignore  Dockerfile  README.md  data.dvc  definitions.py  pyproject.toml
.dvc/: config
.github/workflows/: deploy_api_to_northflank.yaml  deploy_client_to_northflank.yaml  evaluate_past_predictions.yaml  handle_spotify_weather_data.yaml  train_and_evaluate_models.yaml  validate_test_data.yaml
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  data_suite.json  my_suite.json
reports/data_tests/: data_drift.json
reports/sites/: stability_tests.html
src/classes/data/: DataManager.py  DatabaseManager.py
src/classes/mlflow/: mlflow_platform.py
src/classes/requests/: requests_client.py
src/classes/spotify/: spotify_client.py  spotify_token_manager.py
src/client/: Dockerfile  angular.json  package-lock.json  package.json
src/client/src/: index.html  styles.css
src/client/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/client/src/app/components/authorization/: authorization.component.css  authorization.component.html  authorization.component.ts
src/client/src/app/components/generate-music-form/: generate-music-form.component.css  generate-music-form.component.html  generate-music-form.component.spec.ts  generate-music-form.component.ts
src/client/src/app/components/metrics-of-today/: metrics-of-today.component.css  metrics-of-today.component.html  metrics-of-today.component.ts
src/client/src/app/components/pages/admin-panel-page/: admin-panel-page.component.html  admin-panel-page.component.spec.ts  admin-panel-page.component.ts
src/client/src/app/components/pages/generate-music-page/: generate-music-page.component.css  (+2 more)
src/client/src/app/components/production-metrics/: production-metrics.component.css  production-metrics.component.html  production-metrics.component.ts
src/client/src/app/guards/: auth.guard.ts
src/client/src/app/pipes/: date-format.pipe.ts  unix-timestamp-to-datetime.pipe.ts
src/client/src/app/services/: api.service.ts  auth.service.ts  metrics.service.ts  notification.service.ts  socket.service.ts  spotify.service.ts  track.service.ts
src/client/src/environments/: environment.prod.ts  environment.ts
src/data/: .cache.sqlite  evidently_test_data.py  fetch_spotify_data.py  fetch_weather_data.py  merge_processed_data.py  preporcess_weather_data.py  preprocess_spotify_data.py  preprocess_weather_data.py  split_data.py  validate_data.py
src/database/: connector.py
src/models/: evaluate_model.py  evaluate_past_predictions.py  model_helpers.py  train_model.py  train_musicgen_model.py
src/serve/: api.py  api_helpers.py  spotify_auth.py
(+25 files in other folders)
