[tool.poetry]
name = "iis-projekt"
version = "0.1.0"
description = ""
authors = ["kristjansuligoj <kristjan.suligoj@aspiria.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
flask-cors = "^4.0.1"
pymongo = "^4.7.2"
cryptography = "^42.0.7"
pandas = "^2.2.2"
retry-requests = "^2.0.0"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
